# LSTMAttention

./: Dockerfile  main.py  pyproject.toml
.devcontainer/: devcontainer.json
configs/: FreeSolv.yml
notebooks/: 1_preprocessed.ipynb  2_training.ipynb  3_predict.ipynb
reports/FreeSolv/bayes_opt/trial_0/: fold0_metrics.csv  fold1_metrics.csv  fold2_metrics.csv
reports/FreeSolv/bayes_opt/trial_1/: fold0_metrics.csv  fold1_metrics.csv  fold2_metrics.csv
reports/FreeSolv/bayes_opt/trial_10/: fold0_metrics.csv  fold1_metrics.csv  fold2_metrics.csv
reports/FreeSolv/bayes_opt/trial_11/: fold0_metrics.csv  fold1_metrics.csv  fold2_metrics.csv
reports/FreeSolv/bayes_opt/trial_12/: fold0_metrics.csv  fold1_metrics.csv  fold2_metrics.csv
reports/FreeSolv/bayes_opt/trial_13/: fold0_metrics.csv  fold1_metrics.csv  fold2_metrics.csv
reports/FreeSolv/bayes_opt/trial_14/: fold0_metrics.csv  fold1_metrics.csv  fold2_metrics.csv
reports/FreeSolv/bayes_opt/trial_15/: fold0_metrics.csv  fold1_metrics.csv  fold2_metrics.csv
reports/FreeSolv/bayes_opt/trial_16/: fold0_metrics.csv  fold1_metrics.csv  fold2_metrics.csv
reports/FreeSolv/bayes_opt/trial_17/: fold0_metrics.csv  fold1_metrics.csv  fold2_metrics.csv
reports/FreeSolv/model/: all_params.yml
reports/FreeSolv/training/: hold-out_metrics.csv
scripts/: 3_inference.ipynb  4_visualization.ipynb
src/lstm_attention/: augm.py  dataset.py  inference.py  model.py  plot.py  token.py  train.py  trainer.py
src/lstm_attention/modeling/: evaluate.py  predict.py  train.py  trainer.py
(+60 files in other folders)
